<resources>
    <string name="app_name">GitHubUserApp</string>
    <string name="Username" translatable="false">Username</string>
    <string name="Name" translatable="false">Name</string>
    <string name="search_hint">Masukkan Username</string>
    <string name="search">Search</string>

    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>

    <string name="Company">Company</string>
    <string name="Location">Location</string>
    <string name="Repo">Repo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notFoundFavPerson">Favorit Person Not Found!</string>
    <string name="fav_person">Favorit</string>

    <string name="dark_mode">Dark Mode</string>
</resources>